Update to v1.0.1 - fix: removed INTX from available device types - fix: added device types Q4WR and DNTI - fix: split combined single interfaces into separate device types - new: added upgrade script to convert unsupported device types - fix: updated dependencies - fix: added link to official documentaiton - fix: other minor changes

--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
-  "name": "green-go-intercom",
-  "version": "1.0.0",
-  "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "lint:raw": "eslint --ext .ts --ext .js --ignore-pattern dist --ignore-pattern pkg",
-    "lint": "yarn lint:raw ."
-  },
-  "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/bitfocus/companion-module-green-go-intercom.git"
-  },
-  "dependencies": {
-    "@companion-module/base": "~1.0",
-    "osc": "^2.4.4"
-  },
-  "devDependencies": {
-    "@companion-module/tools": "^1.0.2"
-  }
+	"name": "green-go-intercom",
+	"version": "1.0.1",
+	"main": "main.js",
+	"scripts": {
+		"format": "prettier -w ."
+	},
+	"license": "MIT",
+	"repository": {
+		"type": "git",
+    "url": "git+https://github.com/bitfocus/companion-module-greengo-intercom.git"
+	},
+	"dependencies": {
+		"@companion-module/base": "^1.4.0",
+		"osc": "^2.4.4"
+	},
+	"devDependencies": {
+		"@companion-module/tools": "^1.2.0"
+	},
+	"prettier": "@companion-module/tools/.prettierrc.json"
 }
